--- a/finals-api/package.json
+++ b/finals-api/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "@eonasdan/tempus-dominus": "^6.9.9",
+    "@vue/component-compiler-utils": "^3.3.0",
     "axios": "^1.7.2",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-loader": "^17.4.2",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
@@ -22,7 +24,7 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vue/cli-service": "^5.0.8",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3"
   }
